envoy.example.yaml
static_resources:
  listeners:
  - name: main
    address: {socket_address: {address: 0.0.0.0, port_value: 10000}}
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress
          route_config:
            virtual_hosts:
            - name: all
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route: {cluster: upstream}
          http_filters:
          - name: envoy.filters.http.golang
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
              library_id: headers-sanitise
              library_path: /etc/envoy/sanitise.so
              plugin_name: headers-sanitise
              plugin_config:
                "@type": type.googleapis.com/xds.type.v3.TypedStruct
                value:
                  allowed_headers: [accept, content-type, content-length, user-agent, x-request-id]
                  # omit to leave response headers untouched
                  response_allowed_headers: [content-type, content-length, date]
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: upstream
    type: STRICT_DNS
    load_assignment:
      cluster_name: upstream
      endpoints:
      - lb_endpoints:
        - endpoint: {address: {socket_address: {address: backend, port_value: 8080}}}
